app/assets/stylesheets/components/_navbar.scss
/* Main navbar */
.navbar-meteor {
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  background: #FFE270;
  transition: all 0.3s ease;
  height: 70px;
  padding: 0px 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0;
}

/* Logo */
.navbar-brand {
  color: #2F4550;
  opacity: 0.9;
  &:hover {
    color: #2F4550;
    opacity: 1;
  }
  img {
  height: 22px;
  }
}

/* User Avatar LEFT */
.navbar-meteor .avatar {
  height: 35px;
  width: 35px;
  border-radius: 50%;
}

// /* RIGHT section */
// .navbar-meteor-center {
//   display: flex;
//   align-items: center;
//   justify-content: space-between;
// }

/* Basic navbar item */
.navbar-meteor-item {
  cursor: pointer;
  padding: 0 20px;
}

/* Navbar link */
.navbar-meteor-link {
  color: #2F4550;
  font-size: 14px;
  font-size: 1em;
}
.navbar-meteor-link:hover {
  color: #D65768;
  text-decoration: none;
}

/* Dropdown menu */
.navbar-meteor-dropdown-menu {
  margin-top: 15px;
  box-shadow: 1px 1px 4px #E6E6E6;
  border-color: #E6E6E6;
  left: -8px;
}
.navbar-meteor-dropdown-menu li > a {
  transition: color 0.3s ease;
  font-weight: lighter !important;
  color: #2F4550 !important;
  opacity: 0.75;
  // color: #999999 !important;
  font-size: 15px !important;
  line-height: 22px !important;
  padding: 10px 20px;
}
.navbar-meteor-dropdown-menu li > a:hover {
  background: transparent !important;
  color: #2F4550 !important;
  opacity: 1;
}
.navbar-meteor-dropdown-menu:before {
  content: ' ';
  height: 10px;
  width: 10px;
  position: absolute;
  left: 10px;
  top: -6px;
  background-color: white;
  transform: rotate(45deg);
  border-left: 1px solid #E6E6E6;
  border-top: 1px solid #E6E6E6;
}

#edit-text-nav {
  color: #2F4550;
  opacity: 0.9;
  margin-top: 18px;
}

